--- a/pizzeria/src/menu/menu.component.html
+++ b/pizzeria/src/menu/menu.component.html
@@ -8,7 +8,7 @@
 
   <mat-list fxFlex>
     <mat-grid-list cols = '2' rowHeight = '350px'>
-      <mat-grid-tile *ngFor="let pizza of pizzas">
+      <mat-grid-tile *ngFor="let pizza of pizzas" (click)="onSelect(pizza)">
         <img height="350px" src={{pizza.image}} alt={{pizza.name}}>
         <mat-grid-tile-footer>
           <h1 matLine>{{pizza.name}}</h1>
