--- a/Tea/src/styles.scss
+++ b/Tea/src/styles.scss
@@ -1,7 +1,10 @@
 @import '~@angular/material/prebuilt-themes/purple-green.css';
 
+@import '../node_modules/font-awesome/css/font-awesome.css';
+
 body {
   padding: 0;
   margin: 0;
   font-family: Roboto, sans-serif;
+  background: #E1E1E1;
 }
