Add header and footer

--- a/Porsche/src/styles.scss
+++ b/Porsche/src/styles.scss
@@ -1,5 +1,23 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-body {
+/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'variables';
+@import '../node_modules/font-awesome/css/font-awesome';
+
+$it-gray: #ddd;
+$background-dark: #512da8;
+$background-light: #9575cd;
+$background-pale: #d1c4e9;
+$primary-color-dark: #512da8;
+$primary-color: #673ab7;
+$primary-color-light: #d1c4e9;
+$primary-color-text: #ffffff;
+$accent-color: #FFc107;
+$primary-text-color: #212121;
+$secondary-text-color: #757575;
+$divider-color: #bdbdbd;
+
+
+body{
   padding: 0;
   margin: 0;
   font-family: Roboto, sans-serif;
@@ -7,4 +25,27 @@ body {
 .container{
   margin: 20px;
   display: flex;
+}
+.image{
+  max-height: 100%;
+  height: 50px;
+}
+
+
+@mixin zero-margin($pad-up-down, $pad-left-right){
+  margin: 0 auto ;
+  padding:$pad-up-down $pad-left-right;
+}
+
+.background-primary{
+  background-color:$background-dark!important;
+}
+.background-accent{
+  background-color:$accent-color!important;
+}
+.text-floral-white{
+  color: floralwhite !important;
+}
+.flex-spacer{
+  flex: 1 1 auto;
 }
