--- a/Porsche/src/styles.scss
+++ b/Porsche/src/styles.scss
@@ -26,10 +26,20 @@ body{
   margin: 20px;
   display: flex;
 }
+.header-porsche{
+  margin-bottom: -30px;
+  max-height: 100%;
+  height: 60px;
+}
+.header-image{
+  max-height: 100%;
+  height: auto;
+}
 .image{
   max-height: 100%;
-  height: 50px;
+  height: auto;
 }
+
 
 
 @mixin zero-margin($pad-up-down, $pad-left-right){
