--- a/Tea/src/app/header/header.component.html
+++ b/Tea/src/app/header/header.component.html
@@ -1,4 +1,8 @@
 <mat-toolbar color="primary" class="header">
   <span>Tea shop</span>
+
+  <a routerLink='/home' routerLinkActive='active' mat-button class="button"><span class="fa fa-home fa-lg"></span> Главная</a>
+  <a routerLink='/menu' routerLinkActive='active' mat-button class="button"><span class="fa fa-list fa-lg"></span> Список чая</a>
+  <a routerLink='/contact' routerLinkActive='active' mat-button class="button"><span class="fa fa-address-card fa-lg"></span> Контакты</a>
 </mat-toolbar>
 
