--- a/Porsche/src/app/header/header.component.html
+++ b/Porsche/src/app/header/header.component.html
@@ -38,6 +38,7 @@
   <a mat-button routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-lg"></span> О компании</a>
   <a mat-button routerLink="/menu" routerLinkActive="active"><span class="fa fa-list fa-lg"></span> Меню</a>
   <a mat-button routerLink="/contact" routerLinkActive="active"><span class="fa fa-address-card fa-lg"></span> Контакты</a>
+  <a mat-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Войти</a>
 </mat-toolbar>
 
 <!--<div class="container jumbotron"-->
