--- a/Porsche/src/styles.scss
+++ b/Porsche/src/styles.scss
@@ -15,6 +15,7 @@ $accent-color: #FFc107;
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
 $divider-color: #bdbdbd;
+$background-bright-grey: #eff0f1;
 
 
 body{
@@ -58,4 +59,7 @@ body{
 }
 .flex-spacer{
   flex: 1 1 auto;
+}
+.active{
+  background: $background-bright-grey;
 }
