--- a/Porsche/src/app/footer/footer.component.html
+++ b/Porsche/src/app/footer/footer.component.html
@@ -31,7 +31,7 @@
           <i class="fa fa-phone"></i>: +375 29 706 85 85<br>
           <i class="fa fa-fax"></i>: +375 29 636 65 85<br>
           <i class="fa fa-envelope"></i>
-          <a href="mailto:pizzeria@pizzeria.com">porsche@porsche.com</a>
+          <a href="mailto:porsche@porsche.com">porsche@porsche.com</a>
         </address>
       </div>
     </div>
