--- a/Porsche/src/styles.scss
+++ b/Porsche/src/styles.scss
@@ -63,3 +63,14 @@ body{
 .active{
   background: $background-bright-grey;
 }
+
+.full-width {
+  width: 95%;
+}
+.half-width {
+  width: 45%;
+}
+.form-size {
+  width: 75%;
+}
+
