Creating a http client, requests + reactive form

--- a/Porsche/src/app/about/about.component.html
+++ b/Porsche/src/app/about/about.component.html
@@ -2,7 +2,7 @@
      fxLayout="row"
      fxLayoutGap="10px">
   <div fxFlex fxFlex.gt-sm="30%">
-    <img class="image" src="/assets/images/porsche-about.jpeg" alt="Inside">
+    <img class="image" src="{{BaseUrl}}images/porsche-about.jpeg" alt="Inside">
   </div>
 
   <div fxFlex>
