--- a/Porsche/src/app/footer/footer.component.html
+++ b/Porsche/src/app/footer/footer.component.html
@@ -11,15 +11,15 @@
         <h4>Porsche</h4>
         <mat-list>
           <mat-list-item>
-            <a mat-button>Главная</a>
+            <a mat-button routerLink="/home">Главная</a>
           </mat-list-item>
-          <mat-list-item>
+          <mat-list-item routerLink="/about">
             <a mat-button>О porsche</a>
           </mat-list-item>
-          <mat-list-item>
+          <mat-list-item routerLink="/menu">
             <a mat-button>Меню</a>
           </mat-list-item>
-          <mat-list-item>
+          <mat-list-item routerLink="/contact">
             <a mat-button>Контакты</a>
           </mat-list-item>
         </mat-list>
