--- a/Porsche/src/app/menu/menu.component.html
+++ b/Porsche/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
   <div fxFlex *ngIf="porsches">
     <mat-grid-list cols="3" rowHeight="3:2">
       <mat-grid-tile *ngFor="let porsche of porsches" [routerLink]="['/porsche-detail', porsche.id]">
-        <img class="image" src={{porsche.image}} alt={{porsche.name}}>
+        <img class="image" src="{{BaseURL+porsche.image}}" alt={{porsche.name}}>
         <mat-grid-tile-footer>
           <h1>{{porsche.name | uppercase}}</h1>
         </mat-grid-tile-footer>
