--- a/Porsche/src/app/porsche-detail/porsche-detail.component.html
+++ b/Porsche/src/app/porsche-detail/porsche-detail.component.html
@@ -13,7 +13,7 @@
           <h3>{{porsche.name | uppercase}}</h3>
         </mat-card-title>
       </mat-card-header>
-      <img mat-card-image src={{porsche.image}} alt={{porsche.name}}>
+      <img mat-card-image src="{{BaseURL + porsche.image}}" alt={{porsche.name}}>
       <mat-card-content>
         <p>{{porsche.description}}</p>
         <p>Engine: {{porsche.engine}}</p>
@@ -41,8 +41,9 @@
     </mat-card>
   </div>
 
-  <div fxFlex="70" *ngIf="porsche" >
-    <mat-list >
+
+  <div fxFlex="70" *ngIf="porsche">
+    <mat-list>
       <h3>Отзывы</h3>
       <mat-list-item *ngFor="let comment of porsche.comments">
         <h4 matLine>"{{comment.comment}}"</h4>
@@ -50,7 +51,7 @@
           <span>{{comment.rating}}&#9733;</span>
         </p>
         <p matLine>
-          <span>--{{comment.author}},{{comment.date | date: 'longDate':'+0300':'ru'}}</span>
+          <span>-- {{comment.author}}, {{comment.date | date: 'longDate': '+0300': 'ru'}}</span>
         </p>
       </mat-list-item>
     </mat-list>
@@ -58,15 +59,19 @@
     <div fxFlex fxFlexOffset="10" class="form-size">
       <br>
       <h4>Оставьте свой отзыв о пицце</h4>
-      <form  novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+      <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+
         <p>
           <mat-form-field class="full-width">
             <input matInput formControlName="author" placeholder="Имя" type="text">
+
             <mat-error *ngIf="commentFormErrors.author">
               {{commentFormErrors.author}}
             </mat-error>
+
           </mat-form-field>
         </p>
+
         <p>
           <mat-slider class="half-width"
                       formControlName="rating"
@@ -74,27 +79,29 @@
                       step="1"
                       min="0"
                       max="5"
-                      color="primary"
-          >
-
+                      color="primary">
           </mat-slider>
 
           <mat-error style="font-size: small" *ngIf="commentFormErrors.rating">
             {{commentFormErrors.rating}}
           </mat-error>
         </p>
+
         <p>
           <mat-form-field class="full-width">
             <textarea matInput formControlName="comment" placeholder="Ваш отзыв" rows="5"></textarea>
+
             <mat-error *ngIf="commentFormErrors.comment">
               {{commentFormErrors.comment}}
             </mat-error>
+
           </mat-form-field>
         </p>
 
+        <button type="submit" mat-button class="background-primary text-floral-white"
+                [disabled]="commentForm.invalid">Отправить
+        </button>
 
-        <button type="submit" mat-button
-                [disabled]="commentForm.invalid">Отправить</button>
       </form>
     </div>
   </div>
