add a highlight, order, spinner, toolbar...

--- a/Porsche/src/app/contact/contact.component.html
+++ b/Porsche/src/app/contact/contact.component.html
@@ -1,6 +1,9 @@
 <div class="container"
      fxLayout="column"
-     fxLayoutGap="10px">
+     fxLayoutGap="10px"
+     [@expand]=""
+>
+
   <div fxFlex>
     <div>
       <h3>Контакты</h3>
