--- a/Porsche/src/app/login/login.component.html
+++ b/Porsche/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="#eff0f1">
-  Вход
+  Ваш заказ/Вход/Регистрация
   <span class="flex-spacer"></span>
   <button mat-button mat-dialog-close="true">&times;</button>
 </mat-toolbar>
