add a user.ts, sign-up, place-order...

--- a/Porsche/src/app/header/header.component.html
+++ b/Porsche/src/app/header/header.component.html
@@ -2,37 +2,49 @@
              style="height: 118px;
              background: #ffffff;"
 >
+
+<!--    <mat-tab>-->
+<!--      <ng-template mat-tab-label>-->
+<!--        <mat-icon class="example-tab-icon">thumb_up</mat-icon>-->
+<!--        First-->
+<!--      </ng-template>-->
+<!--      Content 1-->
+<!--    </mat-tab>-->
+
   <a mat-button routerLink="/menu" >
     <img class="image"
          width="110"
          src="/assets/images/porsche_logo_PNG3.png" alt="Porsche">
   </a>
 
-  <a mat-button routerLink="/718" routerLinkActive="active">
+  <a mat-button routerLink="/porsche-detail/0" routerLinkActive="active">
     <img class="header-porsche" src="/assets/images/718@2x.jpeg" alt="718">
     <p>718</p>
   </a>
 
-  <a mat-button routerLink="/911" routerLinkActive="active">
+  <a mat-button routerLink="/porsche-detail/1" routerLinkActive="active">
     <img class=" header-porsche" src="/assets/images/911@2x.jpeg" alt="Porsche">
     <p>911</p>
   </a>
-  <a mat-button routerLink="/taycan" routerLinkActive="active">
-    <img class=" header-porsche" src="/assets/images/taycan@2x.jpeg" alt="Porsche">
-    <p>Taycan</p>
-  </a>
-  <a mat-button routerLink="/panamera" routerLinkActive="active">
-    <img class=" header-porsche" src="/assets/images/panamera@2x.jpeg" alt="Porsche">
-    <p>Panamera</p>
-  </a>
-  <a mat-button routerLink="/macan" routerLinkActive="active">
-    <img class=" header-porsche" src="/assets/images/macan@2x.jpeg" alt="Porsche">
-    <p>Macan</p>
-  </a>
-  <a mat-button routerLink="/cayenne" routerLinkActive="active">
+  <a mat-button routerLink="/porsche-detail/2" routerLinkActive="active">
     <img class=" header-porsche" src="/assets/images/cayenne@2x.jpeg" alt="Porsche">
     <p>Cayenne</p>
   </a>
+  <a mat-button routerLink="/porsche-detail/3" routerLinkActive="active">
+    <img class=" header-porsche" src="/assets/images/macan@2x.jpeg" alt="Porsche">
+    <p>Macan</p>
+  </a>
+  <a mat-button routerLink="/porsche-detail/4" routerLinkActive="active">
+    <img class=" header-porsche" src="/assets/images/panamera@2x.jpeg" alt="Porsche">
+    <p>Panamera</p>
+  </a>
+  <a mat-button routerLink="/porsche-detail/5" routerLinkActive="active">
+    <img class=" header-porsche" src="/assets/images/taycan@2x.jpeg" alt="Porsche">
+    <p>Taycan</p>
+  </a>
+
+
+
 
   <a mat-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Главная</a>
   <a mat-button routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-lg"></span> О компании</a>
@@ -46,16 +58,7 @@
     </mat-icon>
   </a>
 
+
+
 </mat-toolbar>
 
-<!--<div class="container jumbotron"-->
-<!--     fxLayout="row"-->
-<!--     fxLayout.sm="column"-->
-<!--     fxLayout.xs="column"-->
-<!--     fxLayoutAlign.xs="start center"-->
-<!--     fxLayoutAlign.sm="start center"-->
-<!--     fxLayout.gt-sm="center center"-->
-<!--     fxLayoutGap="10px"-->
-<!--&gt;-->
-<!--&lt;!&ndash;Добавить описание porshe&ndash;&gt;-->
-<!--</div>-->
