--- a/Porsche/src/app/about/about.component.html
+++ b/Porsche/src/app/about/about.component.html
@@ -1,19 +1,27 @@
 <div class="container"
      fxLayout="row"
      fxLayoutGap="10px"
-      [@expand]="">
-  <div fxFlex fxFlex.gt-sm="30%">
-    <img class="image" src="{{BaseUrl}}images/porsche-about.jpeg" alt="Inside">
+      [@expand]=""
+      style="display: flex;
+             "
+            >
+  <div fxFlex fxFlex.gt-sm="30%" style="width: 100%">
+    <img class="image" src="{{BaseUrl}}images/porsche-about.jpeg" alt="Porsche">
   </div>
 
-  <div fxFlex>
+  <div fxFlex style="position: relative">
     <mat-card>
       <h3>О Porsche</h3>
       <p>
 
-        Компания выпускает спортивные автомобили класса «люкс», а также внедорожники. Производство Porsche в значительной мере кооперируется с Volkswagen. Апараллельно с участием в автоспорте, ведётся работа над совершенствованием конструкции автомобиля (и его узлов): в разные годы были разработаны синхронизаторы механической КПП, автоматические КПП с возможностью ручного переключения (впоследствии — с кнопками переключения на руле), турбонаддув для серийного автомобиля, турбонаддув с изменяемой геометрией крыльчатки турбины в бензиновом двигателе, электронно-управляемая подвеска и так далее[5].
+        Компания выпускает спортивные автомобили класса «люкс», а также внедорожники.
+<br>
+        Производство Porsche в значительной мере кооперируется с Volkswagen.
+        Апараллельно с участием в автоспорте, ведётся работа над совершенствованием конструкции автомобиля (и его узлов): в разные годы были разработаны синхронизаторы механической КПП, автоматические КПП с возможностью ручного переключения (впоследствии — с кнопками переключения на руле), турбонаддув для серийного автомобиля, турбонаддув с изменяемой геометрией крыльчатки турбины в бензиновом двигателе, электронно-управляемая подвеска и так далее[5].
 
-        50,1 % акций компании принадлежат компании Porsche Automobil Holding SE, с декабря 2009 г. 49,9 % акций принадлежат Volkswagen AG. Porsche — публичная компания, часть её акций обращается на Франкфуртской фондовой бирже и во всемирной электронной системе Xetra. Крупные пакеты акций принадлежат семьям Порше и Пиех. Президент и главный управляющий компании с 1993 года — Венделин Видекинг. Выручка компании за 2009/2010 финансовый год составила 7,79 миллиардов евро, что является для компании абсолютным рекордом за всю историю. За этот же отчётный период продано 81 850 автомобилей, а произведено 89 123.
+        50,1 % акций компании принадлежат компании Porsche Automobil Holding SE, с декабря 2009 г. 49,9 % акций принадлежат Volkswagen AG. Porsche — публичная компания, часть её акций обращается на Франкфуртской фондовой бирже и во всемирной электронной системе Xetra.
+        <br>
+        Крупные пакеты акций принадлежат семьям Порше и Пиех. Президент и главный управляющий компании с 1993 года — Венделин Видекинг. Выручка компании за 2009/2010 финансовый год составила 7,79 миллиардов евро, что является для компании абсолютным рекордом за всю историю. За этот же отчётный период продано 81 850 автомобилей, а произведено 89 123.
 
         Также компания уже в течение длительного времени ведёт активную деятельность по организации спортивных клубов (клубы Porsche есть во многих странах Европы и Америки) и соревнований среди различных классов своих машин, регулярно проводятся несколько кубковых соревнований. Этому направлению её деятельности посвящена компьютерная игра Need for Speed: Porsche Unleashed.
       </p>
