--- a/Porsche/src/app/contact/contact.component.html
+++ b/Porsche/src/app/contact/contact.component.html
@@ -87,7 +87,7 @@
           </mat-form-field>
         </p>
 
-        <button type="submit" mat-button class="active">Отправить</button>
+        <button type="submit" mat-button class="active" style="background: #191f22; color: white">Отправить</button>
       </form>
     </div>
   </div>
