--- a/Porsche/src/app/home/home.component.html
+++ b/Porsche/src/app/home/home.component.html
@@ -13,10 +13,11 @@
     </mat-card-header>
     <img mat-card-image src="{{BaseURL+ firstPromotion.image}}" alt={{firstPromotion.name}}>
     <mat-card-content style="font-size: 120%">
-      <p>{{firstPromotion.description}} за {{firstPromotion.price}} $
+      <p>{{firstPromotion.description}} от {{firstPromotion.price}} $
       </p>
     </mat-card-content>
     </mat-card>
+
   <mat-card *ngIf="secondPromotion" fxFlex>
     <mat-card-header>
       <div mat-card-avatar></div>
@@ -26,7 +27,7 @@
     </mat-card-header>
     <img mat-card-image src="{{BaseURL+ secondPromotion.image}}" alt={{secondPromotion.name}}>
     <mat-card-content style="font-size: 120%">
-      <p>{{secondPromotion.description}} за {{secondPromotion.price}} $
+      <p>{{secondPromotion.description}} от {{secondPromotion.price}} $
       </p>
     </mat-card-content>
   </mat-card>
