--- a/Porsche/src/app/toolbar/toolbar.component.html
+++ b/Porsche/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar>
   Ваш заказ/Вход/Регистрация
   <span class="flex-spacer"></span>
   <button mat-button mat-dialog-close="true">&times;</button>
